Fix several style issues
inconsistencies in font-sizes
images and text blocks not centered

--- a/css/boot-journal.css
+++ b/css/boot-journal.css
@@ -4,7 +4,7 @@
 /* document body (contains all content) */
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 15px;
+  font-size: 22.5px;
   line-height: 1.42857143;
   color: #777777;
   background-color: #ffffff;
@@ -46,32 +46,29 @@ h6 {
   margin-bottom: 10.5px;
 }
 h1 {
-  font-size: 4em; 
-/*   font-size: 39px;  */
+  font-size: 2.0em;
 }
 h2 {
-  font-size: 32px;
+  font-size: 1.4em;
 }
 h3 {
-  font-size: 26px;
+  font-size: 1.25em;
 }
 h4 {
-  font-size: 19px;
+  font-size: 1.125em;
 }
 h5 {
-  font-size: 15px;
+  font-size: 1.075em;
 }
 h6 {
-  font-size: 13px;
+  font-size: 1.0em;
 }
 
 /* plain paragraph text */
 .paragraph {
-/*   font-family: sans-serif; */
   margin: 0 0 10.5px;
 }
 p {
-/*   font-family: sans-serif; */
   margin: 0 0 10.5px;
 }
 
@@ -82,7 +79,6 @@ p {
 blockquote {
   padding: 10.5px 21px;
   margin: 0 0 21px;
-  font-size: 18.75px;
   border-left: 5px solid #eeeeee;
 }
 blockquote p:last-child,
@@ -196,6 +192,7 @@ caption {
   padding-bottom: 8px;
   color: #999999;
   text-align: left;
+  font-size: 0.8em;
 }
 
 /* table header row */
@@ -238,7 +235,6 @@ kbd,
 pre,
 samp {
   font-family: monospace, monospace;
-  font-size: 1em;
 }
 code {
   padding: 2px 4px;
@@ -267,7 +263,7 @@ pre {
   display: block;
   padding: 10.5px;
   margin: 0 0 10.5px;
-  font-size: 15px;
+  font-size: 1em;
   line-height: 1.42857143;
   word-break: break-all;
   word-wrap: break-word;
@@ -298,6 +294,19 @@ img {
   color: #777777;
   background-color: #ffffff;
 }
+
+#footnotes {
+  font-size: 0.8em;
+}
+
+.imageblock {
+  margin-top: 22px;
+  font-size: 0.8em;
+  margin-bottom: 22px;
+  text-align: center;
+}
+
+.text-center{text-align:center!important}
 
 /* responsiveness fixes */
 video {
